// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-card ant-card-bordered ant-card-rtl css-var-root"
>
  <div
    class="ant-card-body"
  />
</div>
`;

exports[`Card > should still have padding when card which set padding to 0 is loading 1`] = `
<div
  class="ant-card ant-card-loading ant-card-bordered css-var-root"
>
  <div
    class="ant-card-body"
    style="padding: 0px;"
  >
    <div
      class="ant-skeleton ant-skeleton-active css-var-root"
    >
      <div
        class="ant-skeleton-section"
      >
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li />
          <li
            style="width: 61%;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should support left and right properties for tabBarExtraContent props 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered css-var-root"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`Card > title should be vertically aligned 1`] = `
<div
  class="ant-card ant-card-bordered css-var-root"
  style="width: 300px;"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Card title
      </div>
      <div
        class="ant-card-extra"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            Button
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    <p>
      Card content
    </p>
  </div>
</div>
`;
